generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-arm64-openssl-1.1.x", "linux-arm64-openssl-1.1.x", "debian-openssl-3.0.x"]
  engineType    = "binary"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  USER
  ADMIN
}

enum VerificationStatus {
  PENDING
  APPROVED
  REJECTED
}

enum AccountStatus {
  ACTIVE
  BANNED
}

enum ProductStatus {
  PENDING
  ON_SALE
  SOLD
  OFFLINE
}

enum ProductOfflineReason {
  ORDER_RESERVED
  ADMIN_OFFLINE
  REPORT_OFFLINE
  USER_BANNED
}

enum OutboxEventStatus {
  PENDING
  PROCESSING
  PROCESSED
  FAILED
}

enum OutboxAggregateType {
  PRODUCT
  USER
  ORDER
  CONVERSATION
  REPORT
  CAMPUS_SERVICE
}

enum OrderStatus {
  PENDING
  IN_PROGRESS
  WAITING_REVIEW
  COMPLETED
  CANCELED
}

enum ExternalSyncStatus {
  PENDING
  PROCESSING
  SYNCED
  FAILED
}

enum CampusServiceCategory {
  ERRAND
  AGENCY
  GROUP_BUY
  MOVING
  TUTORING
  SKILL
  REPAIR
  EVENT
  OTHER
  HELP
}

enum CampusServiceUrgency {
  NORMAL
  TODAY
  URGENT
}

enum CampusServiceFulfillmentMode {
  DROP_OFF
  FACE_TO_FACE
  FLEXIBLE
}

enum CampusServiceContactPreference {
  CHAT_ONLY
  PHONE_AFTER_MATCH
  FLEXIBLE
}

enum CampusServiceIntent {
  REQUEST
  OFFER
}

enum CampusServicePattern {
  ONE_TIME
  REUSABLE
}

enum CampusServicePriceMode {
  FIXED
  NEGOTIABLE
  FREE
}

enum CampusServiceLocationMode {
  ONLINE
  ON_SITE
  DELIVERY
  FLEXIBLE
}

enum CampusServiceListingStatus {
  OPEN
  BUSY
  PAUSED
  ENDED
  CANCELED
}

enum CampusServiceListingEndReason {
  EXPIRED
  QUOTA_REACHED
  MANUAL_END
  ADMIN_CLOSE
}

enum CampusServiceOrderStatus {
  PENDING_CONFIRMATION
  CONFIRMED
  WAITING_COMPLETE_CONFIRM
  COMPLETED
  REJECTED
  CANCELED
  EXPIRED
}

enum MessageType {
  TEXT
  IMAGE
  VIDEO
  EMOJI
  ORDER_EVENT
}

enum BehaviorEventType {
  VIEW
  FAVORITE
  UNFAVORITE
  CONTACT
  ORDER
}

enum CreditPointChangeType {
  EARN
  SPEND
  ADJUST
}

enum CreditPointSourceType {
  SIGNIN
  MISSION
  REDEEM
  ADMIN
}

enum CreditRedeemOrderStatus {
  CREATED
  FULFILLED
  CANCELED
  REJECTED
}

model User {
  id                          Int                  @id @default(autoincrement())
  supertokensUserId           String?              @unique
  vendureCustomerId           String?
  commerceSyncStatus          ExternalSyncStatus   @default(PENDING)
  commerceSyncError           String?              @db.Text
  studentId                   String?              @unique
  displayName                 String
  email                       String               @unique
  avatarUrl                   String?
  avatarFrame                 String?
  role                        UserRole             @default(USER)
  creditScore                 Int                  @default(60)
  verificationStatus          VerificationStatus   @default(PENDING)
  accountStatus               AccountStatus        @default(ACTIVE)
  createdAt                   DateTime             @default(now())
  updatedAt                   DateTime             @updatedAt
  verification                StudentVerification?
  products                    Product[]            @relation("ProductSeller")
  favorites                   Favorite[]
  buyerOrders                 Order[]              @relation("OrderBuyer")
  sellerOrders                Order[]              @relation("OrderSeller")
  campusServiceListings       CampusServiceListing[] @relation("CampusServiceListingOwner")
  campusServiceFavorites      CampusServiceFavorite[]
  campusServiceBehaviors      CampusServiceBehavior[]
  campusServiceRequests       CampusServiceOrder[] @relation("CampusServiceRequester")
  campusServiceOffers         CampusServiceOrder[] @relation("CampusServiceProvider")
  reviews                     Review[]             @relation("ReviewReviewer")
  initiatedConversations      Conversation[]       @relation("ConversationInitiator")
  conversationReadCursors     ConversationReadCursor[]
  recommendationProfile       RecommendationProfile?
  sentMessages                Message[]
  reportsFiled                Report[]             @relation("ReportReporter")
  reportsTargeted             Report[]             @relation("ReportTargetUser")
  reportsHandled              Report[]             @relation("ReportHandler")
  orderAppealsFiled           OrderAppeal[]        @relation("OrderAppealAppellant")
  orderAppealsTargeted        OrderAppeal[]        @relation("OrderAppealRespondent")
  orderAppealsHandled         OrderAppeal[]        @relation("OrderAppealHandler")
  auditLogs                   AuditLog[]           @relation("AuditLogActor")
  behaviors                   UserBehavior[]
  following                   UserFollow[]         @relation("UserFollowing")
  followers                   UserFollow[]         @relation("UserFollowers")
  creditAsset                 UserCreditAsset?
  creditPointLedgers          CreditPointLedger[]
  creditMissionClaims         CreditMissionClaim[]
  creditRedeemOrders          CreditRedeemOrder[]
}

model StudentVerification {
  id        Int      @id @default(autoincrement())
  userId    Int      @unique
  realName  String
  college   String
  graduationYear Int?
  phone     String
  studentCardPhotoUrl String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id])
}

model Product {
  id            Int            @id @default(autoincrement())
  sellerId      Int
  vendureProductId String?
  vendureVariantId String?
  commerceSyncStatus ExternalSyncStatus @default(PENDING)
  commerceSyncError String?    @db.Text
  title         String
  description   String
  price         Decimal        @db.Decimal(10, 2)
  category      String
  condition     String
  tags          Json
  status        ProductStatus  @default(PENDING)
  offlineReason ProductOfflineReason?
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  seller        User           @relation("ProductSeller", fields: [sellerId], references: [id])
  images        ProductImage[]
  favorites     Favorite[]
  orders        Order[]
  conversations Conversation[]
  reports       Report[]
  behaviors     UserBehavior[]

  @@index([sellerId])
  @@index([status, createdAt])
  @@index([category, status])
}

model ProductImage {
  id        Int     @id @default(autoincrement())
  productId Int
  imageUrl  String
  sortOrder Int     @default(0)
  product   Product @relation(fields: [productId], references: [id])

  @@index([productId, sortOrder])
}

model Favorite {
  id        Int      @id @default(autoincrement())
  userId    Int
  productId Int
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id])
  product   Product  @relation(fields: [productId], references: [id])

  @@unique([userId, productId])
  @@index([productId, createdAt])
}

model Order {
  id             Int            @id @default(autoincrement())
  vendureOrderId String?
  vendureOrderCode String?
  commerceSyncStatus ExternalSyncStatus @default(PENDING)
  commerceSyncError String?     @db.Text
  productId      Int
  buyerId        Int
  sellerId       Int
  status         OrderStatus    @default(PENDING)
  meetupLocation String?
  note           String?
  paymentIntent  String?
  orderSnapshot  Json?
  autoConfirmAt  DateTime?
  completedAt    DateTime?
  canceledAt     DateTime?
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt
  product        Product        @relation(fields: [productId], references: [id])
  buyer          User           @relation("OrderBuyer", fields: [buyerId], references: [id])
  seller         User           @relation("OrderSeller", fields: [sellerId], references: [id])
  conversations  Conversation[]
  reviews        Review[]
  appeals        OrderAppeal[]

  @@index([productId])
  @@index([buyerId, status, updatedAt])
  @@index([sellerId, status, updatedAt])
  @@index([status, createdAt])
  @@index([autoConfirmAt, status])
}

model OrderAppeal {
  id             Int      @id @default(autoincrement())
  orderId        Int
  appellantId    Int
  respondentId   Int
  issueType      String
  reason         String
  expectedAction String?
  status         String   @default("OPEN")
  resolutionNote String?
  handledBy      Int?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  order          Order    @relation(fields: [orderId], references: [id])
  appellant      User     @relation("OrderAppealAppellant", fields: [appellantId], references: [id])
  respondent     User     @relation("OrderAppealRespondent", fields: [respondentId], references: [id])
  handler        User?    @relation("OrderAppealHandler", fields: [handledBy], references: [id])

  @@index([orderId, status, createdAt])
  @@index([appellantId, status, createdAt])
  @@index([respondentId, status, createdAt])
  @@index([handledBy, status, createdAt])
  @@index([status, createdAt])
}

model CampusServiceListing {
  id                   Int                             @id @default(autoincrement())
  ownerId              Int
  intent               CampusServiceIntent
  pattern              CampusServicePattern           @default(ONE_TIME)
  category             CampusServiceCategory
  title                String
  description          String
  priceMode            CampusServicePriceMode         @default(FIXED)
  amount               Decimal?                       @db.Decimal(10, 2)
  locationMode         CampusServiceLocationMode      @default(FLEXIBLE)
  locationNote         String?
  routeFrom            String?
  routeTo              String?
  validFromAt          DateTime                       @default(now())
  validUntilAt         DateTime
  estimatedMinutes     Int
  urgency              CampusServiceUrgency           @default(NORMAL)
  fulfillmentMode      CampusServiceFulfillmentMode   @default(FLEXIBLE)
  contactPreference    CampusServiceContactPreference @default(CHAT_ONLY)
  itemCount            Int                            @default(1)
  trustNote            String?
  maxTotalOrders       Int?
  maxConcurrentOrders  Int?
  autoConfirm          Boolean                        @default(true)
  status               CampusServiceListingStatus     @default(OPEN)
  endReason            CampusServiceListingEndReason?
  endedAt              DateTime?
  createdAt            DateTime                       @default(now())
  updatedAt            DateTime                       @updatedAt
  owner                User                           @relation("CampusServiceListingOwner", fields: [ownerId], references: [id])
  images               CampusServiceImage[]
  favorites            CampusServiceFavorite[]
  behaviors            CampusServiceBehavior[]
  reports              Report[]
  orders               CampusServiceOrder[]

  @@index([ownerId, status, createdAt])
  @@index([intent, status, validUntilAt])
  @@index([category, status, createdAt])
}

model CampusServiceImage {
  id        Int                  @id @default(autoincrement())
  listingId Int
  imageUrl  String
  sortOrder Int                  @default(0)
  listing   CampusServiceListing @relation(fields: [listingId], references: [id])

  @@index([listingId, sortOrder])
}

model CampusServiceFavorite {
  id        Int                  @id @default(autoincrement())
  userId    Int
  listingId Int
  createdAt DateTime             @default(now())
  user      User                 @relation(fields: [userId], references: [id])
  listing   CampusServiceListing @relation(fields: [listingId], references: [id])

  @@unique([userId, listingId])
  @@index([listingId, createdAt])
}

model CampusServiceBehavior {
  id        Int                  @id @default(autoincrement())
  userId    Int
  listingId Int
  eventType BehaviorEventType
  createdAt DateTime             @default(now())
  user      User                 @relation(fields: [userId], references: [id])
  listing   CampusServiceListing @relation(fields: [listingId], references: [id])

  @@index([userId, createdAt])
  @@index([userId, listingId, createdAt])
  @@index([listingId, eventType])
}

model CampusServiceOrder {
  id                     Int                      @id @default(autoincrement())
  listingId              Int
  requesterId            Int
  providerId             Int
  status                 CampusServiceOrderStatus @default(PENDING_CONFIRMATION)
  applyMessage           String?
  finalAmount            Decimal?                 @db.Decimal(10, 2)
  confirmedAt            DateTime?
  completedAt            DateTime?
  canceledAt             DateTime?
  cancelReason           String?
  expiredAt              DateTime?
  completionRequestedById Int?
  completionRequestedAt  DateTime?
  createdAt              DateTime                 @default(now())
  updatedAt              DateTime                 @updatedAt
  listing                CampusServiceListing     @relation(fields: [listingId], references: [id])
  requester              User                     @relation("CampusServiceRequester", fields: [requesterId], references: [id])
  provider               User                     @relation("CampusServiceProvider", fields: [providerId], references: [id])
  conversations          Conversation[]

  @@index([listingId, status, createdAt])
  @@index([requesterId, status, updatedAt])
  @@index([providerId, status, updatedAt])
}

model Review {
  id         Int      @id @default(autoincrement())
  orderId    Int
  reviewerId Int
  rating     Int
  content    String
  createdAt  DateTime @default(now())
  order      Order    @relation(fields: [orderId], references: [id])
  reviewer   User     @relation("ReviewReviewer", fields: [reviewerId], references: [id])

  @@index([orderId])
  @@index([reviewerId, createdAt])
}

model Conversation {
  id                  Int                @id @default(autoincrement())
  orderId             Int?
  productId           Int?
  campusServiceOrderId Int?
  initiatorId         Int?
  createdAt           DateTime           @default(now())
  updatedAt           DateTime           @updatedAt
  order               Order?             @relation(fields: [orderId], references: [id])
  product             Product?           @relation(fields: [productId], references: [id])
  campusServiceOrder  CampusServiceOrder? @relation(fields: [campusServiceOrderId], references: [id])
  initiator           User?              @relation("ConversationInitiator", fields: [initiatorId], references: [id])
  messages            Message[]
  readCursors         ConversationReadCursor[]

  @@index([orderId, updatedAt])
  @@index([productId, updatedAt])
  @@index([campusServiceOrderId, updatedAt])
  @@index([initiatorId, updatedAt])
}

model Message {
  id             Int          @id @default(autoincrement())
  conversationId Int
  senderId       Int
  type           MessageType  @default(TEXT)
  content        String       @db.Text
  createdAt      DateTime     @default(now())
  conversation   Conversation @relation(fields: [conversationId], references: [id])
  sender         User         @relation(fields: [senderId], references: [id])

  @@index([conversationId, createdAt])
  @@index([senderId, createdAt])
}

model Report {
  id             Int      @id @default(autoincrement())
  reporterId     Int
  productId      Int?
  campusServiceListingId Int?
  targetUserId   Int?
  reason         String
  status         String   @default("OPEN")
  resolutionNote String?
  handledBy      Int?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  reporter       User     @relation("ReportReporter", fields: [reporterId], references: [id])
  product        Product? @relation(fields: [productId], references: [id])
  campusServiceListing CampusServiceListing? @relation(fields: [campusServiceListingId], references: [id])
  targetUser     User?    @relation("ReportTargetUser", fields: [targetUserId], references: [id])
  handler        User?    @relation("ReportHandler", fields: [handledBy], references: [id])

  @@index([reporterId, createdAt])
  @@index([productId, status])
  @@index([campusServiceListingId, status])
  @@index([targetUserId, status])
  @@index([handledBy, status])
  @@index([status, createdAt])
}

model AuditLog {
  id         Int      @id @default(autoincrement())
  actorId    Int?
  actorName  String
  action     String
  targetType String
  targetId   Int
  detail     String
  createdAt  DateTime @default(now())
  actor      User?    @relation("AuditLogActor", fields: [actorId], references: [id])

  @@index([actorId, createdAt])
  @@index([targetType, targetId, createdAt])
}

model OutboxEvent {
  id                  Int                 @id @default(autoincrement())
  topic               String
  eventType           String
  aggregateType       OutboxAggregateType
  aggregateId         Int
  payload             Json
  status              OutboxEventStatus   @default(PENDING)
  availableAt         DateTime            @default(now())
  retryCount          Int                 @default(0)
  lastError           String?             @db.Text
  processingStartedAt DateTime?
  createdAt           DateTime            @default(now())
  processedAt         DateTime?

  @@index([status, availableAt])
  @@index([topic, status, availableAt])
  @@index([aggregateType, aggregateId, createdAt])
  @@index([status, processingStartedAt])
}

model ConversationReadCursor {
  conversationId   Int
  userId           Int
  lastReadMessageId Int?
  lastReadAt       DateTime            @default(now())
  createdAt        DateTime            @default(now())
  updatedAt        DateTime            @updatedAt
  conversation     Conversation        @relation(fields: [conversationId], references: [id])
  user             User                @relation(fields: [userId], references: [id])

  @@id([conversationId, userId])
  @@index([userId, updatedAt])
}

model RecommendationProfile {
  userId          Int      @id
  viewCount       Int      @default(0)
  contactCount    Int      @default(0)
  favoriteCount   Int      @default(0)
  orderCount      Int      @default(0)
  lastBehaviorAt  DateTime?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  user            User     @relation(fields: [userId], references: [id])

  @@index([updatedAt])
}

model UserBehavior {
  id        Int               @id @default(autoincrement())
  userId    Int
  productId Int
  eventType BehaviorEventType
  createdAt DateTime          @default(now())
  user      User              @relation(fields: [userId], references: [id])
  product   Product           @relation(fields: [productId], references: [id])

  @@index([userId, createdAt])
  @@index([userId, productId, createdAt])
  @@index([productId, eventType])
  @@unique([userId, productId, eventType])
}

model UserFollow {
  id           Int      @id @default(autoincrement())
  followerId   Int
  followingId  Int
  createdAt    DateTime @default(now())
  follower     User     @relation("UserFollowing", fields: [followerId], references: [id])
  following    User     @relation("UserFollowers", fields: [followingId], references: [id])

  @@unique([followerId, followingId])
  @@index([followerId, createdAt])
  @@index([followingId, createdAt])
}

model UserCreditAsset {
  userId            Int                @id
  availablePoints   Int                @default(0)
  totalEarnedPoints Int                @default(0)
  totalSpentPoints  Int                @default(0)
  signInStreak      Int                @default(0)
  lastSignInAt      DateTime?
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  user              User               @relation(fields: [userId], references: [id])
  pointLedgers      CreditPointLedger[]
  missionClaims     CreditMissionClaim[]
  redeemOrders      CreditRedeemOrder[]
}

model CreditPointLedger {
  id           Int                   @id @default(autoincrement())
  userId       Int
  assetUserId  Int
  changeType   CreditPointChangeType
  sourceType   CreditPointSourceType
  sourceId     String?
  pointsDelta  Int
  balanceAfter Int
  remark       String?
  createdAt    DateTime              @default(now())
  user         User                  @relation(fields: [userId], references: [id])
  asset        UserCreditAsset       @relation(fields: [assetUserId], references: [userId])

  @@index([userId, createdAt])
  @@index([sourceType, sourceId])
}

model CreditMissionClaim {
  id             Int             @id @default(autoincrement())
  userId         Int
  assetUserId    Int
  missionCode    String
  cycleKey       String
  rewardPoints   Int
  sourceSnapshot Json?
  claimedAt      DateTime        @default(now())
  createdAt      DateTime        @default(now())
  user           User            @relation(fields: [userId], references: [id])
  asset          UserCreditAsset @relation(fields: [assetUserId], references: [userId])

  @@index([userId, missionCode, cycleKey])
  @@index([missionCode, cycleKey])
}

model CreditRedeemOrder {
  id            Int                     @id @default(autoincrement())
  userId        Int
  assetUserId   Int
  rewardCode    String
  pointsCost    Int
  status        CreditRedeemOrderStatus @default(CREATED)
  rewardPayload Json?
  fulfilledAt   DateTime?
  createdAt     DateTime                @default(now())
  updatedAt     DateTime                @updatedAt
  user          User                    @relation(fields: [userId], references: [id])
  asset         UserCreditAsset         @relation(fields: [assetUserId], references: [userId])

  @@index([userId, createdAt])
  @@index([rewardCode, status])
}
